changed photobooth to guestbook

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<div class="card card--pink">
 
 		<a><img src="#"></a>
-			<h1>PHOTOBOOTH</h1>
+			<h1>GUESTBOOK</h1>
 
 		   <div class="cards-button">
 			<a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--red"><div class="button--inverseskew button--hoverstraight">Join The Fun</div></a>
