changed button skew to skew to the right (20deg, 0 deg)

--- a/button.html
+++ b/button.html
@@ -106,29 +106,29 @@
 <p>Buttons with skew</p>
 
 <!-- GREEN BUTTON -->
-  <a href="" class="button button__nocolor button__nocolor--green button--hoverinverseskew"><div>Green skew button</div></a>
+  <a href="" class="button button__nocolor button__nocolor--green button--hoverskew"><div>Green skew button</div></a>
 
 <!-- YELLOW BUTTON -->
-  <a href="" class="button button__nocolor button__nocolor--yellow button--hoverinverseskew"><div >Yellow skew button</div></a>
+  <a href="" class="button button__nocolor button__nocolor--yellow button--hoverskew"><div >Yellow skew button</div></a>
 
 <!-- BLUE BUTTON -->
-  <a href="" class="button button__nocolor button__nocolor--blue button--hoverinverseskew"><div >Blue skew button</div></a>
+  <a href="" class="button button__nocolor button__nocolor--blue button--hoverskew"><div >Blue skew button</div></a>
 
 <!-- RED BUTTON -->
-  <a href="" class="button button__nocolor button--hoverinverseskew"><div >Red skew button</div></a>
+  <a href="" class="button button__nocolor button--hoverskew"><div >Red skew button</div></a>
 
   <p>Colored Buttons with skew</p>
 <!-- RED BUTTON -->
-  <a href="" class="button button--hoverinverseskew">Red skew button</a>
+  <a href="" class="button button--hoverskew">Red skew button</a>
 
   <!-- BLUE BUTTON -->
-    <a href="" class="button button__color--blue button--hoverinverseskew">Blue skew button</a>
+    <a href="" class="button button__color--blue button--hoverskew">Blue skew button</a>
 
     <!-- YELLOW BUTTON -->
-      <a href="" class="button button__color--yellow button--hoverinverseskew">Yellow skew button</a>
+      <a href="" class="button button__color--yellow button--hoverskew">Yellow skew button</a>
 
       <!-- GREEN BUTTON -->
-        <a href="" class="button button__color--green button--hoverinverseskew">Green skew button</a>
+        <a href="" class="button button__color--green button--hoverskew">Green skew button</a>
 
 </div>
 </body>
