--- a/footer.html
+++ b/footer.html
@@ -50,7 +50,7 @@
                         <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                         <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1628370c9c768e89370a304a8_5a2fcc1521" tabindex="-1" value=""></div>
                         <div class="clear">
-                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button--hoverinverseskew button__nocolor button__nocolor--blue"></div>
+                            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button__color--blue button--hoverskew"></div>
                         </div>
         </div>
                     </form>
