--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,52 @@
 </head>
 
   <body>
+	  <header class="nav-desktop nav-mobile">
+	  	<nav>
+	  		<!-- Mobile Nav header: logo and hamburger menu STARTS -->
+	  		<div class="nav-mobile__navbar">
+	  			<a href="index.html" class="nav-mobile__logo">
+	  				<img id="mobileLogo" src="src/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></a>
+	  				<nav>
+	  					<ul class="nav-desktop__list">
 
+	  						<li class="nav-desktop__item">
+	  							<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+	  							</a>
+	  						</li>
+	  						<li class="nav-desktop__item">
+	  							<a class="nav-link nav-link--secondary"
+	  							href="guestbook.html">Guestbook
+	  						</a>
+	  					</li>
+	  					<li  class="nav-desktop__item">
+	  						<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
+	  						</a>
+	  					</li>
+	  				</ul>
+	  			</nav>
+	  			<a id="hamburger"><i  class="fas fa-bars fa-2x nav-mobile__hamburger"></i></a>
+	  		</div>
+
+	  		<!-- Mobile Nav header: logo and hamburger menu ENDS -->
+
+	  		<ul id="mobileMenu" class="mobile-menu nav-mobile--bg-stripes">
+	  			<li class="nav-desktop__item nav-mobile__item">
+	  				<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+	  				</a>
+	  			</li>
+	  			<li class="nav-desktop__item nav-mobile__item">
+	  				<a class="nav-link nav-link--secondary"
+	  				href="guestbook.html">Guestbook
+	  			</a>
+	  		</li>
+	  		<li  class="nav-desktop__item nav-mobile__item">
+	  			<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
+	  			</a>
+	  		</li>
+	  	</ul>
+	  </nav>
+	  </header>
     <div id="mc_embed_signup" class="content-block">
         <form action="https://nic.us15.list-manage.com/subscribe/post?u=1628370c9c768e89370a304a8&amp;id=5a2fcc1521" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
@@ -65,7 +110,60 @@
         </div>
 
 
+		<footer>
+			<div class="section_thanks">
+			  <h4>Thanks for Attending!</h4>
+			<ul class="footer-nav">
+				<li class="footer-nav__item">
+					<a class="footer_menu_link" href="index.html">HOME</a>
+				</li>
+				<li class="footer-nav__item">
+					<a class="footer_menu_link" href="Portfolio.html">PORTFOLIO</a>
+				</li>
+				<li class="footer-nav__item">
+					<a class="footer-nav__link" href="gallery.html">GUESTBOOK</a>
+				</li>
+			</ul>
+		  </div>
 
+		  <div class="section_socials">
+			<h4>Follow Us</h4>
+			<div class="social">
+
+				<ul>
+					<a class="fab fa-2x fa-facebook-f" href="https://www.facebook.com/nicgdes/"></a>
+					<a class="fab fa-2x fa-instagram" href="https://www.instagram.com/nicgdes/"></a>
+					<a class="fab fa-2x fa-twitter" href="https://twitter.com/nicgdes"></a>
+				</ul>
+				 </div>
+			</div>
+
+
+			<div class="section_subscribe">
+				   <h4>Subscribe to our Newsletter</h4>
+
+						<!-- Begin Mailchimp Signup Form -->
+
+						<div id="mc_embed_signup">
+						<form action="https://nic.us15.list-manage.com/subscribe/post?u=1628370c9c768e89370a304a8&amp;id=5a2fcc1521" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+							<!-- <div id="mc_embed_signup_scroll">
+							<label for="mce-EMAIL">Subscribe</label> -->
+							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+							<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1628370c9c768e89370a304a8_5a2fcc1521" tabindex="-1" value=""></div>
+							<div class="clear">
+								<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button--hoverinverseskew button__nocolor button__nocolor--blue"></div>
+							</div>
+			</div>
+						</form>
+
+
+			<div class="copyright">
+				<p>Copyright &copy; 2019 North Idaho College Graphic Design Students</p>
+			</div>
+
+
+		</footer>
   </body>
 
 </html>
