--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 	  	</ul>
 	  </nav>
 	  </header>
-    <div id="mc_embed_signup" class="content-block">
+    <div id="mc_embed_signup" class="content-block content-block--narrow">
         <form action="https://nic.us15.list-manage.com/subscribe/post?u=1628370c9c768e89370a304a8&amp;id=5a2fcc1521" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
             <h2>Subscribe</h2>
