--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     <div id="mc_embed_signup" class="content-block content-block--narrow">
         <form action="https://nic.us15.list-manage.com/subscribe/post?u=1628370c9c768e89370a304a8&amp;id=5a2fcc1521" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-            <h2>Subscribe</h2>
+            <h1>Subscribe</h1>
         <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
         <div class="mc-field-group">
             <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
@@ -88,11 +88,11 @@
         <div id="mergeRow-gdpr" class="mergeRow gdpr-mergeRow content__gdprBlock mc-field-group">
             <div class="content__gdpr">
                 <label class="marketing-header">Marketing Permissions</label>
-                <p>NIC GDES will use the information you provide on this form to be in touch with you and to provide updates and marketing. Please let us know all the ways you would like to hear from us:</p>
+                <p>NIC GDES will use the information you provide on this form to be in touch with you<br> and to provide updates and marketing. <br> Please let us know all the ways you would like to hear from us:</p>
                 <fieldset class="mc_fieldset gdprRequired mc-field-group" name="interestgroup_field">
                 <label class="checkbox subfield" for="gdpr_18517"><input type="checkbox" id="gdpr_18517" name="gdpr[18517]" value="Y" class="av-checkbox"><span>Email</span> </label><label class="checkbox subfield" for="gdpr_18525"><input type="checkbox" id="gdpr_18525" name="gdpr[18525]" value="Y" class="av-checkbox"><span>Direct Mail</span> </label>
                 </fieldset>
-                <p class="unsubscribe">You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
+                <p class="unsubscribe">You can unsubscribe at any time by clicking the link in the footer of our emails.<br> For information about our privacy practices, please visit our website.</p>
             </div>
             <div class="content__gdprLegal">
                 <p class="unsubscribe">We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing.</p>
