updated button, card colors, and replaced src/ with dist/

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<!-- Mobile Nav header: logo and hamburger menu STARTS -->
 			<div class="nav-mobile__navbar">
 				<a href="index.html" class="nav-mobile__logo">
-					<img id="mobileLogo" src="src/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></a>
+					<img id="mobileLogo" src="dist/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></a>
 					<nav>
 						<ul class="nav-desktop__list">
 
@@ -62,11 +62,11 @@
 <div class="hero-image__card">
 <!-- MOBILE HERO IMAGE SLIDER BEGINS -->
   <div class="hero-image__mobile">
-    <img class="hero-image__mobile--slider" src="src/img/mobile-hero/web.png" alt="Illustration of the web team." />
-  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/illustration.png" alt="Illustration of the illustration team." />
-  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/branding.png" alt="Illustration of the branding team." />
-  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/print.png" alt="Illustration of the print team." />
-  <img class="hero-image__mobile--slider" src="src/img/mobile-hero/socialmedia.png" alt="Illustration of thes social media team." />
+    <img class="hero-image__mobile--slider" src="dist/img/mobile-hero/web.png" alt="Illustration of the web team." />
+  <img class="hero-image__mobile--slider" src="dist/img/mobile-hero/illustration.png" alt="Illustration of the illustration team." />
+  <img class="hero-image__mobile--slider" src="dist/img/mobile-hero/branding.png" alt="Illustration of the branding team." />
+  <img class="hero-image__mobile--slider" src="dist/img/mobile-hero/print.png" alt="Illustration of the print team." />
+  <img class="hero-image__mobile--slider" src="dist/img/mobile-hero/socialmedia.png" alt="Illustration of thes social media team." />
 
 </div>
 
@@ -75,41 +75,53 @@
 	DSCVR | Student Portfolio Show <br />
 	<strong>May 3</strong>
 </h1>
-<a href="" class="button button--skew button--hoverstraight"><div class="button--inverseskew button--hoverstraight">View Event Details</div></a>
-<img class="hero-image__desktop" src="src/img/mobile-hero/desktop-hero-01.png" alt="Group illustration." />
+<a href="#home_portfolio_card" class="button button--hoverskew">View Event Details</a>
+<img class="hero-image__desktop" src="dist/img/desktop-hero-01.png" alt="Group illustration." />
 </div>
 <main>
 	<section class="content-block content-block--flex content-block--wide">
-	<div class="card card--yellow">
 
-		<a><img src="src/img/main-img-assets/Web_Portfolio_1200px_RGB.jpg"></a>
+<!-- PORTFOLIO CARD STARTS -->
+  <div id="home_portfolio_card" class="card card--blue">
+
+		<a><img src="dist/img/main-img-assets/Web_Portfolio_1200px_RGB.jpg"></a>
 		<h1>PORTFOLIO</h1>
 
 	   <div class="cards-button">
-		<a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">Discover Us</div></a>
+		<a href="" class="button button__nocolor button__nocolor--blue button--hoverskew">Discover Us</a>
 	 </div>
 	</div>
-	<div class="card card--pink">
+<!-- PORTFOLIO CARD ENDS -->
+
+<!-- GUESTBOOK CARD STARTS -->
+
+	<div class="card card--yellow">
 
 		<a><img src="#"></a>
 			<h1>GUESTBOOK</h1>
 
 		   <div class="cards-button">
-			<a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--red"><div class="button--inverseskew button--hoverstraight">Join The Fun</div></a>
+			<a href="" class="button button__nocolor button__nocolor--yellow button--hoverskew">Join The Fun</a>
 		 </div>
 		</div>
 
-		<div class="card card--blue">
+    <!-- GUESTBOOK CARD ENDS -->
 
-			<a><img src="src/img/main-img-assets/dscvr_web_event.png"></a>
+<!-- FACEBOOK EVENT CARD STARTS -->
+		<div class="card card--pink">
+
+			<a><img src="dist/img/main-img-assets/dscvr_web_event.png"></a>
 			<h1>DSCVR</h1>
 		   <p class="card__description">
 			Discover us at the NIC Workforce Training Center while our Graphic Design graduates showcase their top work.
 		   </p>
 		   <div class="cards-button">
-		   <a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--blue"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
+		   <a href="" class="button button__nocolor button--hoverskew">View Event</a>
 		</div>
 		</div>
+
+<!-- FACEBOOK EVENT CARD ENDS -->
+
 	</section>
 </main>
 
@@ -160,7 +172,7 @@
 					<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
 					<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1628370c9c768e89370a304a8_5a2fcc1521" tabindex="-1" value=""></div>
 					<div class="clear">
-						<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button--hoverinverseskew button__nocolor button__nocolor--blue"></div>
+						<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button__nocolor button__nocolor--blue button--hoverskew"></div>
 					</div>
 	</div>
 				</form>
