--- a/copy.html
+++ b/copy.html
@@ -43,8 +43,12 @@
      <!---Introduction for portfolio page-->
 
      <h2>Discover the Graphic & Web Design graduating class of 2019!</h2>
-     <p>We use includes necessary theories and methodologies to implement creative, technical, 
+     <p>We use techniques that include the necessary theories and methodologies to implement creative, technical, 
             and aesthetic design solutions into print advertising, packaging, web, digital video and new media applications.</p>
+
+
+            <!----Mail Chimp Signup-->
+      <p>Please signup with your email address to recieve updates about this event and future events NIC GDES will be hosting in the future.</p>      
 
 
 </body>
