--- a/copy.html
+++ b/copy.html
@@ -48,7 +48,7 @@
 
 
             <!----Mail Chimp Signup-->
-      <p>Please signup with your email address to recieve updates about this event and future events NIC GDES will be hosting in the future.</p>      
+      <p>Please signup with your email address to recieve updates about this event and future events NIC GDES will be hosting.</p>      
 
 
 </body>
