took away a tags around illustration images in html, added cursor: zoom-in to portfolio-content li's

--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./dist/css/app.css">
-    <title>portfolio card module demo</title>
+    <title>DSCVR: Portfolio</title>
 
 <script>
 
@@ -92,7 +92,7 @@ window.onload = init;
 <!-- Lydia's card start -->
     <div class="wrapper--alignleft">
       <div class="studentCard card">
-	        <a><img src="dist/img/portfolio/web-illustration-large-lydia.png"></a>
+	      <img src="dist/img/portfolio/web-illustration-large-lydia.png">
 
        <h2 class="student-name">
         Lydia Ramus
@@ -145,7 +145,7 @@ window.onload = init;
       </div>
 
     <div class="studentCard card">
-    <a><img src="dist/img/portfolio/web-illustration-large-emma.png"></a>
+    <img src="dist/img/portfolio/web-illustration-large-emma.png">
 
          <h2 class="student-name">
            Emma Castleberry
@@ -159,7 +159,7 @@ window.onload = init;
       <!-- Joe's card start -->
 <div class="wrapper--alignleft">
   <div class="studentCard card">
-    <a><img src="dist/img/portfolio/web-illustration-large-joe.png"></a>
+    <img src="dist/img/portfolio/web-illustration-large-joe.png">
 
 <h2 class="student-name">
 Joe Click
@@ -211,7 +211,7 @@ Joe Click
 </div>
 
 <div class="studentCard card">
-<a><img src="dist/img/portfolio/web-illustration-large-danielle.png"></a>
+<img src="dist/img/portfolio/web-illustration-large-danielle.png" />
 
 <h2 class="student-name">
 Danielle Prochaska
@@ -225,7 +225,7 @@ Danielle Prochaska
 <!-- Karey's card start -->
 <div class="wrapper--alignleft">
 <div class="studentCard card">
-<a><img src="dist/img/portfolio/web-illustration-large-karey.png"></a>
+<img src="dist/img/portfolio/web-illustration-large-karey.png" />
 
 <h2 class="student-name">
 Karey Stivers
@@ -279,7 +279,7 @@ Karey Stivers
 </div>
 
 <div class="studentCard card">
-<a><img src="dist/img/portfolio/web-illustration-large-kennedy.png"></a>
+<img src="dist/img/portfolio/web-illustration-large-kennedy.png" />
 
 <h2 class="student-name">
 Kennedy Pew
@@ -293,7 +293,7 @@ Kennedy Pew
 <!-- Suelynn's card start -->
 <div class="wrapper--alignleft">
 <div class="studentCard card">
-<a><img src="dist/img/portfolio/web-illustration-large-suelynn.png"></a>
+<img src="dist/img/portfolio/web-illustration-large-suelynn.png" />
 
 <h2 class="student-name">
 Suelynn Parker
@@ -344,7 +344,7 @@ Suelynn Parker
 </div>
 
 <div class="studentCard card">
-<a><img src="dist/img/portfolio/web-illustration-large-mattea.png"></a>
+<img src="dist/img/portfolio/web-illustration-large-mattea.png" />
  <h2 class="student-name">
    Mattea Bergland
  </h2>
@@ -408,7 +408,7 @@ Suelynn Parker
     </div>
 
   <div class="studentCard card">
-  <a><img src="dist/img/portfolio/web-illustration-large-kallie.png"></a>
+<img src="dist/img/portfolio/web-illustration-large-kallie.png" />
 
        <h2 class="student-name">
          Kallie Khademi
@@ -421,7 +421,7 @@ Suelynn Parker
     <!-- Andre's card start -->
         <div class="wrapper--alignleft">
         <div class="studentCard card">
-    	<a><img src="dist/img/portfolio/web-illustration-large-andre.png"></a>
+    	<img src="dist/img/portfolio/web-illustration-large-andre.png" />
            <h2 class="student-name">
             Andre Clark
           </h2>
@@ -472,7 +472,7 @@ Suelynn Parker
           </div>
 
         <div class="studentCard card">
-        <a><img src="dist/img/portfolio/web-illustration-large-jonah.png"></a>
+        <img src="dist/img/portfolio/web-illustration-large-jonah.png"/>
 
              <h2 class="student-name">
                Jonah Leeder
