added Lydia's portfolio pieces

--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -113,9 +113,9 @@ window.onload = init;
       <p>I have always been drawn to writing and the immersive art of storytelling. Great design tells a story of its own, and I love trying to capture that in its visual form.</p>
 
         <ul class="portfolio-content">
-          <li class="nav-link nav-link--secondary"><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-          <li class="nav-link nav-link--secondary"><img src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-          <li class="nav-link nav-link--secondary"><img src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+          <li class="nav-link nav-link--secondary"><img src="dist/img/lydia-ramus/inlander.png" alt="Inlander cover, camp edition, by Lydia Ramus." /></li>
+          <li class="nav-link nav-link--secondary"><img src="dist/img/lydia-ramus/portfolio_menu.png" alt="Restaurant menu by Lydia Ramus." /></li>
+          <li class="nav-link nav-link--secondary"><img src="dist/img/lydia-ramus/solstice_invite.png" alt="Winter Solstice event invitation by Lydia Ramus." /></li>
         </ul>
 
       </div>
