Added link hover effects to portfolio thumbnails and added attributes to image alts

--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -113,9 +113,9 @@ window.onload = init;
       <p>I have always been drawn to writing and the immersive art of storytelling. Great design tells a story of its own, and I love trying to capture that in its visual form.</p>
 
         <ul class="portfolio-content">
-          <li class="nav-link nav-link--secondary"><img src="dist/img/lydia-ramus/inlander.png" alt="Inlander cover, camp edition, by Lydia Ramus." /></li>
-          <li class="nav-link nav-link--secondary"><img src="dist/img/lydia-ramus/portfolio_menu.png" alt="Restaurant menu by Lydia Ramus." /></li>
-          <li class="nav-link nav-link--secondary"><img src="dist/img/lydia-ramus/solstice_invite.png" alt="Winter Solstice event invitation by Lydia Ramus." /></li>
+          <li class="nav-link nav-link--success"><img src="dist/img/lydia-ramus/inlander.png" alt="Inlander cover, camp edition, by Lydia Ramus." /></li>
+          <li class="nav-link nav-link--success"><img src="dist/img/lydia-ramus/portfolio_menu.png" alt="Restaurant menu by Lydia Ramus." /></li>
+          <li class="nav-link nav-link--success"><img src="dist/img/lydia-ramus/solstice_invite.png" alt="Winter Solstice event invitation by Lydia Ramus." /></li>
         </ul>
 
       </div>
@@ -137,9 +137,9 @@ window.onload = init;
         <p>From illustrations to layouts, refinement to building, I usually start with rough sketches for everything. I'm looking to hone my skills and do something more meaningful with my artistic ability.</p>
 
         <ul class="portfolio-content">
-          <li class="nav-link nav-link--tertiary"><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-          <li class="nav-link nav-link--tertiary"><img src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-          <li class="nav-link nav-link--tertiary"><img src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+          <li class="nav-link nav-link--purple"><img src="dist/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster by Emma Castleberry." /></li>
+          <li class="nav-link nav-link--purple"><img src="dist/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu by Emma Castleberry." /></li>
+          <li class="nav-link nav-link--purple"><img src="dist/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover by Emma Castleberry." /></li>
         </ul>
 
       </div>
@@ -178,9 +178,9 @@ Joe Click
 <p>I enjoy creating illustrations & concept designs. I am inspired by designs that break outside the box of normal conventions.</p>
 
 <ul class="portfolio-content">
-<li class="nav-link nav-link--primary"><img src="dist/img/joe-click/JC_Poetry_Night.png" alt="Poetry night poster." /></li>
-<li class="nav-link nav-link--primary"><img src="dist/img/joe-click/JC_Preeflight.png" alt="Preflight event poster." /></li>
-<li class="nav-link nav-link--primary"><img src="dist/img/joe-click/JC_Stencil_portrate.png" alt="Vector drawing of a woman's portrait." /></li>
+<li class="nav-link nav-link--purple"><img src="dist/img/joe-click/JC_Poetry_Night.png" alt="Poetry night poster by Joseph Click." /></li>
+<li class="nav-link nav-link--purple"><img src="dist/img/joe-click/JC_Preeflight.png" alt="Preflight event poster by Joseph Click." /></li>
+<li class="nav-link nav-link--purple"><img src="dist/img/joe-click/JC_Stencil_portrate.png" alt="Vector drawing of a woman's portrait by Joseph Click." /></li>
 </ul>
 
 </div>
@@ -203,9 +203,9 @@ Joe Click
 <p>When designing, I don't allow any limitations; I allow my mind to be completely free to wander and explore different ideas. This allows me to invent unique designs that will tell stories or evoke raw emotions.</p>
 
 <ul class="portfolio-content">
-<li><img src="dist/img/danielle-prochaska/preflight-2019-danielle-prochaska.png" alt="Preflight Poster." /></li>
-<li><img src="dist/img/danielle-prochaska/prochaska-creative-logo.png" alt="Prochaska Creative logo." /></li>
-<li><img src="dist/img/danielle-prochaska/urbanity-branding.png" alt="Urbanity Branding." /></li>
+<li class="nav-link nav-link--success"><img src="dist/img/danielle-prochaska/preflight-2019-danielle-prochaska.png" alt="Preflight Poster by Danielle Prochaska." /></li>
+<li class="nav-link nav-link--success"><img src="dist/img/danielle-prochaska/prochaska-creative-logo.png" alt="Prochaska Creative logo by Danielle Prochaska." /></li>
+<li class="nav-link nav-link--success"><img src="dist/img/danielle-prochaska/urbanity-branding.png" alt="Urbanity Branding by Danielle Prochaska." /></li>
 </ul>
 
 </div>
@@ -245,9 +245,9 @@ Karey Stivers
 <p>Being a designer isn't just about having a career and making money – it's about being the creative person I've always been... I love being the "creative type" that helps others share their message in interesting and beautiful ways...</p>
 
 <ul class="portfolio-content">
-<li><img src="dist/img/karey-stivers/aa-tokyo-ad-portfolio.png" alt="Destination American Airlines Ad." /></li>
-<li><img src="dist/img/karey-stivers/skiresort-webpage_ks.png" alt="Ski resort homepage." /></li>
-<li><img src="dist/img/karey-stivers/dotkomtea-kspng.png" alt="dotKom Tea product labels." /></li>
+<li class="nav-link nav-link--success"><img src="dist/img/karey-stivers/aa-tokyo-ad-portfolio.png" alt="Destination American Airlines Ad by Karey Stivers." /></li>
+<li class="nav-link nav-link--success"><img src="dist/img/karey-stivers/skiresort-webpage_ks.png" alt="Ski resort homepage by Karey Stivers." /></li>
+<li class="nav-link nav-link--success"><img src="dist/img/karey-stivers/dotkomtea-kspng.png" alt="dotKom Tea product labels by Karey Stivers." /></li>
 
 </ul>
 
@@ -271,9 +271,9 @@ Karey Stivers
 <p>All of my inspiration comes from the world around me. There are so many opportunities, possibilities, and beauty all around us, and that is the fire that feeds my inspiration.</p>
 
 <ul class="portfolio-content">
-<li><img src="dist/img/kennedy-pew/inlander.png" alt="Vector illustration Inlander cover." /></li>
-<li><img src="dist/img/kennedy-pew/mononoke poster.png" alt="Mononoke poster" /></li>
-<li><img src="dist/img/kennedy-pew/viscomm.png" alt="Viscom Poster." /></li>
+<li class="nav-link nav-link--tertiary"><img src="dist/img/kennedy-pew/inlander.png" alt="Vector illustration Inlander cover by Kennedy Pew." /></li>
+<li class="nav-link nav-link--tertiary"><img src="dist/img/kennedy-pew/mononoke poster.png" alt="Mononoke poster by Kennedy Pew." /></li>
+<li class="nav-link nav-link--tertiary"><img src="dist/img/kennedy-pew/viscomm.png" alt="Viscom Poster by Kennedy Pew." /></li>
 </ul>
 
 </div>
@@ -312,9 +312,9 @@ Suelynn Parker
 <p>I am inspired by animations, video game graphics, magazines, and comic book/novels. Curiosity motivates me to explore new designs and skills and be inspired by other designers and artists.</p>
 
 <ul class="portfolio-content">
-<li><img src="dist/img/suelynn-parker/Estate MagAd.jpg" alt="Estate magazine ad." /></li>
-<li><img src="dist/img/suelynn-parker/TetTrungThu.jpg" alt="Tet Trung Thu card" /></li>
-<li><img src="dist/img/suelynn-parker/Vizzcom.jpg" alt="Viscom poster" /></li>
+<li class="nav-link nav-link--purple"><img src="dist/img/suelynn-parker/Estate MagAd.jpg" alt="Estate magazine ad by Suelynn Parker." /></li>
+<li class="nav-link nav-link--purple"><img src="dist/img/suelynn-parker/TetTrungThu.jpg" alt="Tet Trung Thu card by Suelynn Parker." /></li>
+<li class="nav-link nav-link--purple"><img src="dist/img/suelynn-parker/Vizzcom.jpg" alt="Viscom poster by Suelynn Parker." /></li>
 </ul>
 
 </div>
@@ -336,9 +336,9 @@ Suelynn Parker
 <p>I didn't want to waste any time "getting started" in my career. I have grown so much as an artist, designer, and as a person since I joined the NIC Graphic Design Program.</p>
 
 <ul class="portfolio-content">
-  <li><img src="dist/img/mattea-bergland/DuskNightclub.png" alt="Vector Dusk Night Club event poster." /></li>
-  <li><img src="dist/img/mattea-bergland/MESSAGESTHATMATTER.png" alt="Communications 101 textbook cover." /></li>
-  <li><img src="dist/img/mattea-bergland/sleepy_hollow_final.png" alt="Sleepy Hollow movie poster." /></li>
+  <li class="nav-link nav-link--primary"><img src="dist/img/mattea-bergland/DuskNightclub.png" alt="Vector Dusk Night Club event poster by Mattea Bergland." /></li>
+  <li class="nav-link nav-link--primary"><img src="dist/img/mattea-bergland/MESSAGESTHATMATTER.png" alt="Communications 101 textbook cover by Mattea Bergland." /></li>
+  <li class="nav-link nav-link--primary"><img src="dist/img/mattea-bergland/sleepy_hollow_final.png" alt="Sleepy Hollow movie poster by Mattea Bergland." /></li>
 </ul>
 
 </div>
@@ -376,9 +376,9 @@ Suelynn Parker
     <p>I like to do lettering and get inspiration from the web. I would like to work with cool people doing branding and designing for others.</p>
 
     <ul class="portfolio-content">
-      <li><img src="dist/img/sam-stoke/Sam-icecream.jpg" alt="North Idaho Creamery ice cream ad." /></li>
-      <li><img src="dist/img/sam-stoke/sam-lettering.jpg" alt="Typography poster" /></li>
-      <li><img src="dist/img/sam-stoke/sam-tattoo-logo.jpg" alt="Tattoo design t-shirt." /></li>
+      <li class="nav-link nav-link--primary"><img src="dist/img/sam-stoke/Sam-icecream.jpg" alt="North Idaho Creamery ice cream ad by Sam Stoke." /></li>
+      <li class="nav-link nav-link--primary"><img src="dist/img/sam-stoke/sam-lettering.jpg" alt="Typography poster by Sam Stoke." /></li>
+      <li class="nav-link nav-link--primary"><img src="dist/img/sam-stoke/sam-tattoo-logo.jpg" alt="Tattoo design t-shirt by Sam Stoke." /></li>
     </ul>
 
   </div>
@@ -400,9 +400,9 @@ Suelynn Parker
       <p>I would love to work as a Creative Director for a design agency. I had spent the previous 10 years as either a high school teacher, therapeutic wilderness guide, or life coach working with at-risk young adults and adolescents. I jump at the chance of being creative and solving problems, which inspired me to be a graphic designer.</p>
 
       <ul class="portfolio-content">
-        <li><img src="dist/img/kallie-khademi/Bee_Bee_Cider.jpg" alt="Beebee Cider ad." /></li>
-        <li><img src="dist/img/kallie-khademi/Green_Tea_Matcha.jpg" alt="Green Tea Matcha packaging." /></li>
-        <li><img src="dist/img/kallie-khademi/SPiff_World_Shorts_Khademi.jpg" alt="Spiff World Shorts poster." /></li>
+        <li class="nav-link nav-link--secondary"><img src="dist/img/kallie-khademi/Bee_Bee_Cider.jpg" alt="Beebee Cider ad by Kallie Khademi." /></li>
+        <li class="nav-link nav-link--secondary"><img src="dist/img/kallie-khademi/Green_Tea_Matcha.jpg" alt="Green Tea Matcha packaging by Kallie Khademi." /></li>
+        <li class="nav-link nav-link--secondary"><img src="dist/img/kallie-khademi/SPiff_World_Shorts_Khademi.jpg" alt="Spiff World Shorts poster by Kallie Khademi." /></li>
       </ul>
 
     </div>
@@ -429,7 +429,7 @@ Suelynn Parker
 
         <div class="portfolio-content__wrapper">
           <div class="social-wrapper">
-          <p class="designer-name">Cosmic Div</p>
+          <p class="designer-name">Cosmic Division</p>
           <!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
           <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
           <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
@@ -439,9 +439,9 @@ Suelynn Parker
           <p>I want to be a core member of a talented team working on premium websites. I get creative through my process of listening to loud electric music, and drinking black tea.</p>
 
           <ul class="portfolio-content">
-            <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-            <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-            <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+            <li class="nav-link nav-link--success"><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+            <li class="nav-link nav-link--success"><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+            <li class="nav-link nav-link--success"><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
           </ul>
 
         </div>
@@ -464,9 +464,9 @@ Suelynn Parker
             <p>I currently work at Anthem Church as a Creative/Production Assistant and apply skills for freelance on the side. I have my design persona, Leeder Designs, designing brands, prints, website, and managing social media.</p>
 
             <ul class="portfolio-content">
-              <li><img src="dist/img/jonah-leeder/01_mihara_jzleeder.png" alt="Mihara Law PLLC webpage." /></li>
-              <li><img src="dist/img/jonah-leeder/02_redemption_jzleeder.png" alt="Redemption t-shirt." /></li>
-              <li><img src="dist/img/jonah-leeder/03_jesus_jzleeder.png" alt="Jesus Saves guitar strap." /></li>
+              <li class="nav-link nav-link--tertiary"><img src="dist/img/jonah-leeder/01_mihara_jzleeder.png" alt="Mihara Law PLLC webpage by Jonah Leeder." /></li>
+              <li class="nav-link nav-link--tertiary"><img src="dist/img/jonah-leeder/02_redemption_jzleeder.png" alt="Redemption t-shirt by Jonah Leeder." /></li>
+              <li class="nav-link nav-link--tertiary"><img src="dist/img/jonah-leeder/03_jesus_jzleeder.png" alt="Jesus Saves guitar strap by Jonah Leeder." /></li>
             </ul>
 
           </div>
@@ -505,9 +505,9 @@ Suelynn Parker
           <p>I love food & animals, but what I love even more is to travel the world & capture its beauty. I would love to be on a set somewhere making movies and to be in charge of projects and/or helping others create new designs. What helps my creative process is a cup of of coffee, putting on some Queen, and busting a move! </p>
 
           <ul class="portfolio-content">
-            <li><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-            <li><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-            <li><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+            <li class="nav-link nav-link--secondary"><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
+            <li class="nav-link nav-link--secondary"><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
+            <li class="nav-link nav-link--secondary"><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
           </ul>
 
         </div>
