--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
 		<a><img src="dist/img/main-img-assets/Web_Portfolio_1200px_RGB.jpg"></a>
 		<h1>PORTFOLIO</h1>
+    <p>Discover the Graphic & Web Design graduating class of 2019!</p>
 
 	   <div class="cards-button">
 		<a href="" class="button button__nocolor button__nocolor--blue button--hoverskew">Discover Us</a>
@@ -98,10 +99,11 @@
 	<div class="card card--yellow">
 
 		<a><img src="#"></a>
-			<h1>GUESTBOOK</h1>
+			<h1>GDES PROGRAM</h1>
+      <p>The NIC Graphic Design program prepares students for jobs in the graphic & web design markets by teaching them the industry's standards.</p>
 
 		   <div class="cards-button">
-			<a href="" class="button button__nocolor button__nocolor--yellow button--hoverskew">Join The Fun</a>
+			<a href="" class="button button__nocolor button__nocolor--yellow button--hoverskew">Learn More</a>
 		 </div>
 		</div>
 
@@ -111,10 +113,12 @@
 		<div class="card card--pink">
 
 			<a><img src="dist/img/main-img-assets/dscvr_web_event.png"></a>
-			<h1>DSCVR</h1>
-		   <p class="card__description">
-			Discover us at the NIC Workforce Training Center while our Graphic Design graduates showcase their top work.
-		   </p>
+      <h1>DSCVR Event</h1>
+      <p>Discover the Graphic & Web Design graduating class of 2019 at the North Idaho College Workforce Training Center. </p>
+      <p>When: Friday, May 3rd 2019 at 4:30 pm to 7 pm <br/>
+      Where: Workforce Training Center <br/>
+              525 Clearwater LoopPost Falls, ID 83854</p>
+              <br/>
 		   <div class="cards-button">
 		   <a href="" class="button button__nocolor button--hoverskew">View Event</a>
 		</div>
