Updated Contact Us card
Added img to src files and updated verbage

--- a/cards.html
+++ b/cards.html
@@ -20,8 +20,8 @@
 	</div>
 	<div class="card card--pink">
 
-		<a><img src="#"></a>
-			<h1>PHOTOBOOTH</h1>
+		<a><img src="src/img/contact-us.jpg"></a>
+			<h1>CONTACT US</h1>
 
 		   <div class="cards-button">
 			<a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--red"><div class="button--inverseskew button--hoverstraight">Join The Fun</div></a>
