--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
 
 	<div class="card card--yellow">
 
-		<a><img src="#"></a>
-			<h1>GDES PROGRAM</h1>
+		<a><img src="src/img/contact-us.jpg"></a>
+			<h1>CONTACT US</h1>
       <p>The NIC Graphic Design program prepares students for jobs in the graphic & web design markets by teaching them the industry's standards.</p>
 
 		   <div class="cards-button">
