--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <p>Discover the Graphic & Web Design graduating class of 2019!</p>
 
 	   <div class="cards-button">
-		<a href="" class="button button__nocolor button__nocolor--blue button--hoverskew">Discover Us</a>
+		<a href="portfolio.html" class="button button__nocolor button__nocolor--blue button--hoverskew">Discover Us</a>
 	 </div>
 	</div>
 <!-- PORTFOLIO CARD ENDS -->
@@ -98,12 +98,12 @@
 
 	<div class="card card--yellow">
 
-		<a><img src="src/img/contact-us.jpg"></a>
+		<a><img src="src/img/contact-us-1200x1200.jpg"></a>
 			<h1>CONTACT US</h1>
       <p>The NIC Graphic Design program prepares students for jobs in the graphic & web design markets by teaching them the industry's standards.</p>
 
 		   <div class="cards-button">
-			<a href="" class="button button__nocolor button__nocolor--yellow button--hoverskew">Learn More</a>
+			<a href="contact.html" class="button button__nocolor button__nocolor--yellow button--hoverskew">Learn More</a>
 		 </div>
 		</div>
 
@@ -120,7 +120,7 @@
               525 Clearwater LoopPost Falls, ID 83854</p>
               <br/>
 		   <div class="cards-button">
-		   <a href="" class="button button__nocolor button--hoverskew">View Event</a>
+		   <a href="https://www.facebook.com/events/296907444564690/" class="button button__nocolor button--hoverskew">View Event</a>
 		</div>
 		</div>
 
