--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,20 @@
 	  	</ul>
 	  </nav>
 	  </header>
+
+	  <h1 class="section-heading">Contact Us</h1>
+	  <section class="blurb">
+
+		  <div class="content-block content-block--narrow">
+			  <h1>About The Program</h1>
+			  <p class="content-block content-block--narrow">
+				  The Graphic Design and Web Design Program is designed to prepare students for entry-level
+				  positions in their perspective fields. The program emphasizes basic skills,
+				  knowledge, and abilities typically encountered in the graphic design professions.
+				  Instruction includes theories and methodologies used to implement creative, technical,
+				  and aesthetic solutions into print advertising, packaging, web, digital video and new media applications.</p>
+			  </div>
+		  </section>
     <div id="mc_embed_signup" class="content-block content-block--narrow">
         <form action="https://nic.us15.list-manage.com/subscribe/post?u=1628370c9c768e89370a304a8&amp;id=5a2fcc1521" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
