added faculty cards

--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,31 @@
 				  and aesthetic solutions into print advertising, packaging, web, digital video and new media applications.</p>
 			  </div>
 		  </section>
+
+		  <h1 class="section-heading">Faculty</h1>
+	  <section class="content-block content-block--flex content-block--narrow">
+
+	  <!-- PORTFOLIO CARD STARTS -->
+	  <div id="home_portfolio_card" class="card card--blue">
+
+	  	<a><img class="multiply" src="src/img/characters/Philippe.png"></a>
+	  	<h2 >Philippe Valle</h2>
+
+	  </div>
+	  <!-- PORTFOLIO CARD ENDS -->
+
+	  <!-- GUESTBOOK CARD STARTS -->
+
+	  <div class="card card--yellow">
+
+	  	<a><img class="multiply" src="src/img/characters/Brad.png"></a>
+	  		<h2>Brad Schwartz</h2>
+	  	</div>
+
+
+	  </section>
+	  <h1 class="section-heading">Contact</h1>
+
     <div id="mc_embed_signup" class="content-block content-block--narrow">
         <form action="https://nic.us15.list-manage.com/subscribe/post?u=1628370c9c768e89370a304a8&amp;id=5a2fcc1521" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
