--- a/contact.html
+++ b/contact.html
@@ -92,7 +92,8 @@
     <div id="mc_embed_signup" class="content-block content-block--narrow">
         <form action="https://nic.us15.list-manage.com/subscribe/post?u=1628370c9c768e89370a304a8&amp;id=5a2fcc1521" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
             <div id="mc_embed_signup_scroll">
-            <h1>Subscribe</h1>
+			<h1>Subscribe</h1>
+			<p>Please signup with your email address to recieve updates about this event and future events NIC GDES will be hosting.</p>
         <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
         <div class="mc-field-group">
             <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
