reverting lightbox css files

--- a/hero.html
+++ b/hero.html
@@ -39,7 +39,7 @@ body {
 </div>
 
 <!-- desktop hero image -->
-<img class="hero-image__desktop" src="dist/img/desktop-hero-01.png" alt="Group illustration." />
+<img class="hero-image__desktop" src="src/img/mobile-hero/desktop-hero-01.png" alt="Group illustration." />
 
 
 <!-- MOBILE HERO IMAGE SLIDER ENDS -->
@@ -49,7 +49,7 @@ body {
     DSCVR | Student Portfolio Show <br />
     <strong>May 3</strong>
 </h1>
-<a href="" class="button button--hoverskew">View Event Details</a>
+<a href="" class="button button--skew button--hoverstraight"><div class="button--inverseskew button--hoverstraight">View Event Details</div></a>
 
 <!-- MOBILE CTA ENDS -->
 </div>
