--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -7,86 +7,59 @@
     <link rel="stylesheet" href="./dist/css/app.css">
     <title>DSCVR: Portfolio</title>
 
-<script>
-
-function init() {
-  // targets ul that holds each student's three portfolio pieces
-  var portfolioGallery = document.getElementsByClassName('portfolio-content');
-
-  var studentCard = document.getElementsByClassName('studentCard');
-  var portfolioContentBlock = document.getElementsByClassName('portfolio-content__wrapper');
-
-  // var myList = document.getElementsByTagName('ul');
-  //   for (var i = 0; i < 14 ; i++){
-  //     myList[i].addEventListener('click', function(){
-  //       document.getElementById('lightbox').className = 'openLightbox';});
-  //   }
-
-  var unorderedList = document.getElementsByTagName('ul');
-    for (var i = 0; i < 14 ; i++){
-      unorderedList[i].addEventListener('click', openLB);
-      unorderedList[i].addEventListener('click', slideshow, true);
-    }
-
-
-    function openLB() {
-        document.getElementById('lightbox').className = 'openLightbox';
-
-    }
-
-function slideshow(){
-// Grabs the clicked on ul and passes its li to lightbox's ul
-  var source_thumb_img = this.innerHTML;
-  // var currentSelectedImage = this[0].innerHTML;
-  var target_thumb_img = document.getElementsByClassName('target_thumb_img');
-  target_thumb_img[0].innerHTML = source_thumb_img;
-
-  mainLbImage();
-  lbThumbnailControls();
-}
-
-function mainLbImage(){
-  // inserts first li of lightbox into main image
-  var mainImgLB = document.getElementById('main_img');
-  var target_thumb_img = document.getElementsByClassName('target_thumb_img');
-   mainImgLB.innerHTML = target_thumb_img[0].firstElementChild.innerHTML;
-}
-
-function lbThumbnailControls() {
-  // makes each lightbox thumbnail image transfer to main image on click
-  var mainImgLB = document.getElementById('main_img');
-  var target_thumb_img = document.getElementsByClassName('target_thumb_img');
-  var target_thumb_li = target_thumb_img[0].children;
-
-  for (var i = 0; i < target_thumb_li.length; i++) {
-    target_thumb_li[i].addEventListener('click', function thumbControls(){
-      mainImgLB.innerHTML = this.innerHTML;
-    });
-
-  }
-
-}
-
-
-var closeTab = document.getElementById('lightbox_closeout')
-closeTab.addEventListener('click', function(){document.getElementById('lightbox').className = 'closeLightbox';});
-
-
-};
-
-
-window.onload = init;
-
- </script>
-
 
 </head>
 <body>
-  <h1>PORTFOLIO</h1>
+  <!-- <h1>PORTFOLIO</h1> -->
   <!-- overall container encompassing all cards  -->
   <section class="portfolio-card__container">
 <!-- .wrapper is sub-container that emcompasses all cards  -->
+
+<header class="nav-desktop nav-mobile">
+  <nav>
+    <!-- Mobile Nav header: logo and hamburger menu STARTS -->
+    <div class="nav-mobile__navbar">
+      <a href="index.html" class="nav-mobile__logo">
+        <img id="mobileLogo" src="dist/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></a>
+        <nav>
+          <ul class="nav-desktop__list">
+
+            <li class="nav-desktop__item">
+              <a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+              </a>
+
+          <li  class="nav-desktop__item">
+            <a class=" nav-link nav-link--tertiary" href="contact.html">Contact
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <a id="hamburger"><i  class="fas fa-bars fa-2x nav-mobile__hamburger"></i></a>
+    </div>
+
+    <!-- Mobile Nav header: logo and hamburger menu ENDS -->
+
+    <ul id="mobileMenu" class="mobile-menu nav-mobile--bg-stripes">
+      <li class="nav-desktop__item nav-mobile__item">
+        <a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+        </a>
+      </li>
+      <li class="nav-desktop__item nav-mobile__item">
+        <a class="nav-link nav-link--secondary"
+        href="guestbook.html">Guestbook
+      </a>
+    </li>
+    <li  class="nav-desktop__item nav-mobile__item">
+      <a class=" nav-link nav-link--tertiary" href="contact.html">Contact
+      </a>
+    </li>
+  </ul>
+</nav>
+</header>
+<!-- NAVIGATION ENDS -->
+
 <div class="portfolio-wrapper">
+
 
 
 <!-- Lydia's card start -->
@@ -439,9 +412,9 @@ Suelynn Parker
           <p>I want to be a core member of a talented team working on premium websites. I get creative through my process of listening to loud electric music, and drinking black tea.</p>
 
           <ul class="portfolio-content">
-            <li class="nav-link nav-link--success"><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-            <li class="nav-link nav-link--success"><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-            <li class="nav-link nav-link--success"><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+            <li class="nav-link nav-link--success"><img src="dist/img/AndreClark/doomsday.jpg" alt="Doomsday Article by Andre Clark." /></li>
+            <li class="nav-link nav-link--success"><img src="dist/img/AndreClark/marseille.png" alt="Marseille magazine cover by Andre Clark." /></li>
+            <li class="nav-link nav-link--success"><img src="dist/img/AndreClark/orbitron.jpg" alt="Orbitron poster by Andre Clark." /></li>
           </ul>
 
         </div>
@@ -487,7 +460,6 @@ Suelynn Parker
         <div class="wrapper--alignleft">
         <div class="studentCard card">
     	<a><img src="dist/img/portfolio/web-illustration-large-rachel.png"></a>
-            <h1>PORTFOLIO</h1>
            <h2 class="student-name">
             Rachel Adair
           </h2>
@@ -505,9 +477,8 @@ Suelynn Parker
           <p>I love food & animals, but what I love even more is to travel the world & capture its beauty. I would love to be on a set somewhere making movies and to be in charge of projects and/or helping others create new designs. What helps my creative process is a cup of of coffee, putting on some Queen, and busting a move! </p>
 
           <ul class="portfolio-content">
-            <li class="nav-link nav-link--secondary"><img src="./src/img/emma-castleberry/Cold_November-web.png" alt="Vector Illustration Movie Poster." /></li>
-            <li class="nav-link nav-link--secondary"><img src="./src/img/emma-castleberry/Cthulhu_BookCover-web.png" alt="Book cover of a Cthulhu." /></li>
-            <li class="nav-link nav-link--secondary"><img src="./src/img/emma-castleberry/MessagesThatMatter.png" alt="Communications 101 Textbook Cover." /></li>
+            <li class="nav-link nav-link--secondary"><img src="dist/img/rachel-adair/ADAIR,CREATE2019_12001200.jpg" alt="Create poster by Rachel Adair." /></li>
+            <li class="nav-link nav-link--secondary"><img src="dist/img/rachel-adair/GDES223_MESSAGESTHATMATTER_ADAIR,RACHEL copy.jpg" alt="Messages That Matter Textbook cover b y Rachel Adair." /></li>
           </ul>
 
         </div>
@@ -543,7 +514,183 @@ Suelynn Parker
 </div>
   </section>
 
+  <footer>
+  	<div class="section_thanks">
+  	  <h4>Thanks for Attending!</h4>
+  	<ul class="footer-nav">
+  		<li class="footer-nav__item">
+  			<a class="footer_menu_link" href="index.html">HOME</a>
+  		</li>
+  		<li class="footer-nav__item">
+  			<a class="footer_menu_link" href="Portfolio.html">PORTFOLIO</a>
+  		</li>
+  		<li class="footer-nav__item">
+  			<a class="footer-nav__link" href="gallery.html">GUESTBOOK</a>
+  		</li>
+  	</ul>
+    </div>
 
+    <div class="section_socials">
+  	<h4>Follow Us</h4>
+  	<div class="social">
+
+  		<ul>
+  			<a class="fab fa-2x fa-facebook-f" href="https://www.facebook.com/nicgdes/"></a>
+  			<a class="fab fa-2x fa-instagram" href="https://www.instagram.com/nicgdes/"></a>
+  			<a class="fab fa-2x fa-twitter" href="https://twitter.com/nicgdes"></a>
+  		</ul>
+  		 </div>
+  	</div>
+
+
+  	<div class="section_subscribe">
+  		   <h4>Subscribe to our Newsletter</h4>
+
+  				<!-- Begin Mailchimp Signup Form -->
+
+  				<div id="mc_embed_signup">
+  				<form action="https://nic.us15.list-manage.com/subscribe/post?u=1628370c9c768e89370a304a8&amp;id=5a2fcc1521" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+  					<!-- <div id="mc_embed_signup_scroll">
+  					<label for="mce-EMAIL">Subscribe</label> -->
+  					<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+  					<!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+  					<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1628370c9c768e89370a304a8_5a2fcc1521" tabindex="-1" value=""></div>
+  					<div class="clear">
+  						<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button button__nocolor button__nocolor--blue button--hoverskew"></div>
+  					</div>
+  	</div>
+  				</form>
+
+
+  	<div class="copyright">
+  		<p>Copyright &copy; 2019 North Idaho College Graphic Design Students</p>
+  	</div>
+
+
+  </footer>
+  <!-- FOOTER ENDS -->
+  <script>
+  	function init() {
+
+// LIGHTBOX SCRIPT BEGINS
+
+
+
+  // targets ul that holds each student's three portfolio pieces
+  var portfolioGallery = document.getElementsByClassName('portfolio-content');
+
+  var studentCard = document.getElementsByClassName('studentCard');
+  var portfolioContentBlock = document.getElementsByClassName('portfolio-content__wrapper');
+
+  // var myList = document.getElementsByTagName('ul');
+  //   for (var i = 0; i < 14 ; i++){
+  //     myList[i].addEventListener('click', function(){
+  //       document.getElementById('lightbox').className = 'openLightbox';});
+  //   }
+
+  var unorderedList = document.getElementsByTagName('ul');
+    for (var i = 0; i < 14 ; i++){
+      unorderedList[i].addEventListener('click', openLB);
+      unorderedList[i].addEventListener('click', slideshow, true);
+    }
+
+
+    function openLB() {
+        document.getElementById('lightbox').className = 'openLightbox';
+
+    }
+
+function slideshow(){
+// Grabs the clicked on ul and passes its li to lightbox's ul
+  var source_thumb_img = this.innerHTML;
+  // var currentSelectedImage = this[0].innerHTML;
+  var target_thumb_img = document.getElementsByClassName('target_thumb_img');
+  target_thumb_img[0].innerHTML = source_thumb_img;
+
+  mainLbImage();
+  lbThumbnailControls();
+}
+
+function mainLbImage(){
+  // inserts first li of lightbox into main image
+  var mainImgLB = document.getElementById('main_img');
+  var target_thumb_img = document.getElementsByClassName('target_thumb_img');
+   mainImgLB.innerHTML = target_thumb_img[0].firstElementChild.innerHTML;
+}
+
+function lbThumbnailControls() {
+  // makes each lightbox thumbnail image transfer to main image on click
+  var mainImgLB = document.getElementById('main_img');
+  var target_thumb_img = document.getElementsByClassName('target_thumb_img');
+  var target_thumb_li = target_thumb_img[0].children;
+
+  for (var i = 0; i < target_thumb_li.length; i++) {
+    target_thumb_li[i].addEventListener('click', function thumbControls(){
+      mainImgLB.innerHTML = this.innerHTML;
+    });
+
+  }
+
+}
+
+
+var closeTab = document.getElementById('lightbox_closeout')
+closeTab.addEventListener('click', function(){document.getElementById('lightbox').className = 'closeLightbox';});
+
+
+
+
+
+
+
+// LIGHTBOX SCRIPT ENDS
+
+
+
+  		var menuDropdownList = document.getElementById('mobileMenu');
+  		var hamburgerMenu = document.getElementById('hamburger');
+  		var menuDropdownList = document.getElementById('mobileMenu'); //targets ul with menu a tags
+  		function menuClick() {
+  			var hamburgerMenu = document.getElementById('hamburger'); //targets mobile hamburger menu icon
+  			hamburgerMenu.onclick = showMenu;  //sets onclick listening to mobile hamburger menu
+
+  			var showWebsite = document.getElementsByTagName('body');
+  			// var w = window.clientWidth;
+  		}
+
+  		function showMenu() {
+  			//mobile menu toggle
+  			if (menuDropdownList.style.display === 'flex' ) {
+  				menuDropdownList.style.display = 'none';
+  			}
+  			else {
+  				menuDropdownList.style.display = 'flex';
+
+  			}
+  		}
+
+  			menuClick();
+  // Start Mobile Hero Image Slider
+       var imageTotal = 0;
+       imageSlider();
+
+       function imageSlider() {
+         var images = document.getElementsByClassName("hero-image__mobile--slider");
+         for (var i = 0; i < images.length; i++) {
+           images[i].style.display = "none";
+         }
+        imageTotal++;
+        if (imageTotal > images.length) { imageTotal = 1
+        }
+        images[imageTotal - 1].style.display = "block";
+        setTimeout (imageSlider, 2000);
+       }
+  // End Mobile Hero Image Slider
+
+    };
+
+    window.onload = init;
+    </script>
 
 
 
