removed guestbook links added top margin class

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 							<li class="nav-desktop__item">
 								<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
 								</a>
-						
+							</li>
+
 						<li  class="nav-desktop__item">
 							<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
 							</a>
@@ -35,14 +36,13 @@
 
 			<ul id="mobileMenu" class="mobile-menu nav-mobile--bg-stripes">
 				<li class="nav-desktop__item nav-mobile__item">
-					<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+					<a class="nav-link nav-link--primary" href="index.html">Home
 					</a>
 				</li>
 				<li class="nav-desktop__item nav-mobile__item">
-					<a class="nav-link nav-link--secondary"
-					href="guestbook.html">Guestbook
-				</a>
-			</li>
+					<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+					</a>
+				</li>
 			<li  class="nav-desktop__item nav-mobile__item">
 				<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
 				</a>
@@ -54,7 +54,7 @@
 
 
 <!-- HERO BEGINS -->
-<div class="hero-image__card">
+<div class="top hero-image__card">
 <!-- MOBILE HERO IMAGE SLIDER BEGINS -->
   <div class="hero-image__mobile">
     <img class="hero-image__mobile--slider" src="dist/img/mobile-hero/web.png" alt="Illustration of the web team." />
@@ -140,7 +140,7 @@
 			<a class="footer_menu_link" href="Portfolio.html">PORTFOLIO</a>
 		</li>
 		<li class="footer-nav__item">
-			<a class="footer-nav__link" href="gallery.html">GUESTBOOK</a>
+			<a class="footer-nav__link" href="gallery.html">CONTACT</a>
 		</li>
 	</ul>
   </div>
