--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,36 @@
 </head>
 
   <body>
+	  <script type="text/javascript">
+
+	  function init() {
+  		var menuDropdownList = document.getElementById('mobileMenu');
+  		var hamburgerMenu = document.getElementById('hamburger');
+  		var menuDropdownList = document.getElementById('mobileMenu'); //targets ul with menu a tags
+  		function menuClick() {
+  			var hamburgerMenu = document.getElementById('hamburger'); //targets mobile hamburger menu icon
+  			hamburgerMenu.onclick = showMenu;  //sets onclick listening to mobile hamburger menu
+
+  			var showWebsite = document.getElementsByTagName('body');
+  			// var w = window.clientWidth;
+  		}
+
+  		function showMenu() {
+  			//mobile menu toggle
+  			if (menuDropdownList.style.display === 'flex' ) {
+  				menuDropdownList.style.display = 'none';
+  			}
+  			else {
+  				menuDropdownList.style.display = 'flex';
+
+  			}
+  		}
+
+  			menuClick();
+		}
+		window.onload = init;
+			</script>
+
 	  <header class="nav-desktop nav-mobile">
 	  	<nav>
 	  		<!-- Mobile Nav header: logo and hamburger menu STARTS -->
@@ -34,15 +64,15 @@
 	  		<!-- Mobile Nav header: logo and hamburger menu ENDS -->
 
 	  		<ul id="mobileMenu" class="mobile-menu nav-mobile--bg-stripes">
+				<li class="nav-desktop__item nav-mobile__item">
+	  				<a class="nav-link nav-link--primary" href="index.html">Home
+	  				</a>
+	  			</li>
 	  			<li class="nav-desktop__item nav-mobile__item">
 	  				<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
 	  				</a>
 	  			</li>
-	  			<li class="nav-desktop__item nav-mobile__item">
-	  				<a class="nav-link nav-link--secondary"
-	  				href="guestbook.html">Guestbook
-	  			</a>
-	  		</li>
+
 	  		<li  class="nav-desktop__item nav-mobile__item">
 	  			<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
 	  			</a>
@@ -51,7 +81,7 @@
 	  </nav>
 	  </header>
 
-	  <h1 class="section-heading">Contact Us</h1>
+	  <h1 class="section-heading top">Contact Us</h1>
 	  <section class="blurb">
 
 		  <div class="content-block content-block--narrow">
