--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <!-- PORTFOLIO CARD STARTS -->
   <div id="home_portfolio_card" class="card card--blue">
 
-		<a><img src="dist/img/main-img-assets/Web_Portfolio_1200px_RGB.jpg"></a>
+		<a href="portfolio.html"><img src="dist/img/main-img-assets/Web_Portfolio_1200px_RGB.jpg"></a>
 		<h1>PORTFOLIO</h1>
     <p>Discover the Graphic & Web Design graduating class of 2019!</p>
 
@@ -93,7 +93,7 @@
 
 	<div class="card card--yellow">
 
-		<a><img src="src/img/contact-us-1200x1200.jpg"></a>
+		<a href="contact.html"><img src="src/img/contact-us-1200x1200.jpg"></a>
 			<h1>CONTACT US</h1>
       <p>The NIC Graphic Design program prepares students for jobs in the graphic & web design markets by teaching them the industry's standards.</p>
 
@@ -107,7 +107,7 @@
 <!-- FACEBOOK EVENT CARD STARTS -->
 		<div class="card card--pink">
 
-			<a><img src="dist/img/main-img-assets/dscvr_web_event.png"></a>
+			<a href="https://www.facebook.com/events/296907444564690/"><img src="dist/img/main-img-assets/dscvr_web_event.png"></a>
       <h1>DSCVR Event</h1>
       <p>Discover the Graphic & Web Design graduating class of 2019 at the North Idaho College Workforce Training Center. </p>
       <p>When: Friday, May 3rd 2019 at 4:30 pm to 7 pm <br/>
